--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="topnav" style="background-color:red;border:9px solid red;height:50;" align="left">
 <br>
 <left style="font-size:19;"><b>
-&emsp;&emsp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
+&ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
 &emsp;&emsp;<a href="https://saintgits.org/engineering-college/about-us/profile/" style="color:snow;text-decoration:none;" target="_blank">About</a>
 &emsp;&emsp;<a href="https://saintgits.org/mca-college/mca-admission-2/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
 &emsp;&emsp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
