--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <img src="../images/Header-Stickers9.jpg" width="486" height="125" align="right">
 <div class="topnav" style="background-color:red;border:9px solid red;height:50;" align="left">
 <br>
-<left style="font-size:19;"><b>
+<center style="font-size:19;"><b>
 &ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
-&emsp;&emsp;<a href="https://saintgits.org/engineering-college/about-us/profile/" style="color:snow;text-decoration:none;" target="_blank">About</a>
-&emsp;&emsp;<a href="https://saintgits.org/mca-college/mca-admission-2/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
-&emsp;&emsp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
-&emsp;&emsp;<a href="https://saintgits.org/mca-college/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
-&emsp;&emsp;<a href="https://saintgits.org/mca-college/placements/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
-&emsp;&emsp;<a href="https://saintgits.org/mca-college/faculty/master-of-computer-applications/" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
-</b></left>
+&emsp;&ensp;<a href="https://saintgits.org/engineering-college/about-us/profile/" style="color:snow;text-decoration:none;" target="_blank">About</a>
+&emsp;&ensp;<a href="https://saintgits.org/mca-college/mca-admission-2/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
+&emsp;&ensp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
+&emsp;&ensp;<a href="https://saintgits.org/mca-college/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
+&emsp;&ensp;<a href="https://saintgits.org/mca-college/placements/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
+&emsp;&ensp;<a href="https://saintgits.org/mca-college/faculty/master-of-computer-applications/" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
+</b></center>
 <br>
 </div>
 <center><img src="../images/Admin-Block.jpg" width="900"></center>
